# saga-glib

./: .travis.yml  README.md  install.sh  meson.build  meson_options.txt
src/: meson.build  saga-backend-module.vala  saga-backend-types.vala  saga-context.vala  saga-error.vala  saga-file-transfer.vala  saga-job-description.vala  saga-job-module.vala  saga-job-service.vala  saga-job-state.vala  saga-job.vala  saga-metric.vala  saga-module.vala  saga-monitorable.vala  saga-object.vala  saga-permission.vala  saga-permissions.vala  saga-serial-task-container.vala  saga-session.vala  saga-task-container.vala  saga-task-state.vala  saga-task.vala  saga-url.vala  saga-wait-mode.vala  saga.vala
src/backends/: meson.build  saga-local.vala  saga-torque.vala
subprojects/: gxml.wrap
tests/: gi-test.py  job-service-test.vala  meson.build  url-test.vala
vapi/: linux.vapi
